--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
     column-gap: 10px;
 }
 
-#home {
+#home img {
     height: 100 px;
 }
 
@@ -29,7 +29,7 @@
         height: 300px; 
     }
 
-    #home {
+    #home img {
         height: 300 px;
     }
 }
