--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,12 @@
     column-gap: 10px;
 }
 
-
+@media (min-width: 768px) {
+    #topnav, .topnav {
+        /* Desktop height override */
+        height: 200px; 
+    }
+}
 
 #topnav a {
     display: flex;
