--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,10 @@
 }
 
 #topnav a {
+    height: 200px;
+    width: 300px;
     display: flex;
     align-items: center;
-    text-decoration: none;
 }
 
 .logo-img {
