--- a/styles.css
+++ b/styles.css
@@ -33,18 +33,18 @@
 }
 
 .monster-site-header-button {
-    height: 200px; 
-    width: 300px;
-    font-size: 1em;
-    border-radius: 5px;
-    background-color: #00B4C4;
-    color: white;
-    display: flex;
-    justify-content: center;
+    height: 40px; 
+    width: 120px; /* Use a slightly wider width for desktop button */
+    font-size: 1.1em; /* Make text slightly larger */
+    border-radius: 5px; 
+    background-color: #00B4C4; /* Enforce the background color */
+    color: white !important; /* IMPORTANT: Use !important to override the global 'a' color */
+    border: none;
+    display: flex; 
+    justify-content: center; 
     align-items: center;
-    padding: 0;
+    padding: 0 15px; /* Add horizontal padding for a better look */
     text-align: center;
-    line-height: normal; 
 }
 
 @media (max-width: 600px) {
@@ -57,10 +57,10 @@
     }
 
     .monster-site-header-button {
-        width: 60px; /* Smaller button on mobile */
-        height: 30px;
-        font-size: 0.7em;
-    }
+        width: 150px; /* Make it bigger on desktop */
+        height: 50px;
+        font-size: 1.2em;
+    }
 
     #topnav, .topnav {
         height: 60px;
@@ -123,11 +123,11 @@ body {
     text-align: center;
 }
 
-a {
+/* a {
     font-size: 25px;
     text-decoration:none;
     color: #00B4C4;
-}
+} */
 
 .monster-image {
     border-radius: 24px;
