--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center; 
     justify-content: space-between;
-    height: 80px;
+    /* height: 80px; */
     padding: 0 15%;
 }
 
@@ -57,8 +57,8 @@
     }
 
     .monster-site-header-button {
-        width: 150px; /* Make it bigger on desktop */
-        height: 50px;
+        height: 200px; 
+        width: 400px;
         font-size: 1.2em;
     }
 
