--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,14 @@
     overflow: hidden;
 }
 
-#topnav, .topnav {
+/* #topnav, .topnav {
     overflow: hidden;
     display: flex;
     align-items: center; 
     justify-content: space-between;
-    /* height: 80px; */
+     height: 80px; 
     padding: 0 15%;
-}
+} */
 
 /* #topnav a {
     display: flex;
