--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900');
 
-.topnav {
+/* .topnav {
     overflow: hidden;
-}
+} */
 
 .split {
     margin-left: 15px; 
