--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,54 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900');
 
-/* .topnav {
-    overflow: hidden;
-} */
-
 .split {
     margin-left: 15px; 
 }
+
+#topnav, .topnav {
+    display: flex;
+    align-items: center; 
+    justify-content: space-between;
+    height: 8em; 
+    padding: 0 5%;
+    overflow: hidden;
+}
+
+#topnav a#home {
+    margin-right: 20%;
+}
+.logo-img {
+    width: 50%;
+    height: 80%;
+    max-width: 300px;
+    height: auto;
+}
+
+.profile-link {
+    margin-left: 25%;
+}
+.profile-img {
+    width: 100%;
+    height: 100%;
+    max-width: 40px;
+    height: auto;
+}
+
+.monster-site-header-button {
+    width: 10%;
+    height: 40%;
+    background-color: #00B4C4;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    font-size: 2em;
+    margin: 4px 2px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
+
 
 /* #topnav, .topnav {
     overflow: hidden;
