--- a/styles.css
+++ b/styles.css
@@ -4,49 +4,44 @@
     margin-left: 15px; 
 }
 
-#topnav, .topnav {
-    display: flex;
-    align-items: center; 
-    justify-content: space-between;
-    height: 8em; 
-    padding: 0 5%;
-    overflow: hidden;
+/* Styles for the main navigation bar container */
+#topnav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 8em;
+    padding: 0 5%;
 }
 
-#topnav a#home {
+/* Styles for the image inside the home link */
+.logo-img {
+    width: 50%;
+    height: 80%;
     margin-right: 20%;
 }
-.logo-img {
-    width: 50%;
-    height: 80%;
-    max-width: 300px;
-    height: auto;
+
+/* Styles for the 'Shop' link */
+#shop {
+    width: 10%;
+    height: 40%;
+    background-color: #00B4C4;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 2em;
+    margin: 4px 2px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.profile-link {
-    margin-left: 25%;
-}
+/* Styles for the image inside the profile link */
 .profile-img {
-    width: 100%;
-    height: 100%;
-    max-width: 40px;
-    height: auto;
-}
-
-.monster-site-header-button {
-    width: 10%;
-    height: 40%;
-    background-color: #00B4C4;
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    font-size: 2em;
-    margin: 4px 2px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
+    width: 100%;
+    height: 100%;
+    margin-left: 25%;
 }
 
 
