--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@
     margin-left: 15px; 
 }
 
+.image-container img {
+  display: block; 
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* --- 🖥️ DESKTOP BASE STYLES (Default) --- */
 
 #topnav {
