--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,11 @@ h1 {
     font-size: 3em;
 }
 
+h3 {
+    text-align: center;
+    font-size: 2em;
+}
+
 footer {
     bottom: 0px;
     position: absolute;
