--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ body {
     text-align: center;
 }
 
-/* a {
+ a {
     font-size: 25px;
     text-decoration:none;
     color: #00B4C4;
@@ -166,7 +166,11 @@ body {
 
 .center-text {
     text-align: center;
-    margin-top: 7%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
 }
 
 #contact-us {
