--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
   display: block; 
   margin-left: auto;
   margin-right: auto;
+  width: 50%;
+  height: 50%;
 }
 
 /* --- 🖥️ DESKTOP BASE STYLES (Default) --- */
@@ -166,7 +168,11 @@ body {
 
 .center-text {
     text-align: center;
-    margin-top: 10%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
 }
 
 #contact-us {
@@ -259,8 +265,8 @@ h2 {
 }
 
 #qr-code {
-  width: 80%;
-  height: 80%;
+  width: 50%;
+  height: 50%;
   margin: auto;
 } 
 
