--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@
   display: block; 
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-  height: 50%;
+  width: 30%;
+  height: 30%;
 }
 
 /* --- 🖥️ DESKTOP BASE STYLES (Default) --- */
@@ -80,11 +80,11 @@
         order: 2; 
     }
 
-    /* #profile .profile-img {
-        width: 35px; 
-        height: 35px;
+     #profile .profile-img {
+        width: 70px; 
+        height: 70px;
         margin: 0; 
-    } */
+    } 
 
     #shop {
         order: 3; 
@@ -265,8 +265,8 @@ h2 {
 }
 
 #qr-code {
-  width: 50%;
-  height: 50%;
+  width: 30%;
+  height: 30%;
   margin: auto;
 } 
 
