--- a/styles.css
+++ b/styles.css
@@ -70,11 +70,11 @@
         order: 1; 
     }
 
-    /* #home .logo-img {
-        width: 20%; 
-        height: 20%; 
+    #home .logo-img {
+        width: auto; 
+        height: 100px; 
         margin: 0; 
-    } */
+    }
 
     #profile {
         order: 2; 
@@ -93,6 +93,12 @@
         margin: 0 auto; 
         font-size: 1.5em; 
     }
+
+    #qr-code {
+      width: 50%;
+      height: 50%;
+      margin: auto;
+    } 
 }
 
 h1 {
@@ -100,9 +106,9 @@ h1 {
     font-size: 3em;
 }
 
-h4 {
+p {
     text-align: center;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 footer {
