--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,8 @@ h1 {
 p {
     text-align: center;
     font-size: 1.5em;
+    margin-left: 0 !important;
+    padding-left: 0 !important;
 }
 
 footer {
