--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@
     }
 
     #home .logo-img {
-        width: 200px; 
+        width: 350px; 
         height: 100px; 
         margin: 0; 
     }
@@ -104,8 +104,8 @@
       display: block; 
       margin-left: auto;
       margin-right: auto;
-      width: 60%;
-      height: 60%;
+      width: 300px;
+      height: 300px;
     }
 }
 
