--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@
 
     #home .logo-img {
         width: 350px; 
-        height: 100px; 
+        height: 80px; 
         margin: 0; 
     }
 
@@ -95,8 +95,8 @@
     }
 
     #qr-code {
-      width: 50%;
-      height: 50%;
+      width: 100%;
+      height: 100%;
       margin: auto;
     } 
 
@@ -114,7 +114,7 @@ h1 {
     font-size: 3em;
 }
 
-p {
+home-description-text {
     text-align: center;
     font-size: 1.5em;
     margin-left: 0 !important;
@@ -208,12 +208,6 @@ h2 {
     font-size: 4.5rem; 
     text-align: center;
 }
-
-#home-description-text {
-    font-size: 1.56rem;
-    text-align: center;
-}
-
 
 @media (max-width: 600px) {
     #home-title-text {
