--- a/styles.css
+++ b/styles.css
@@ -95,17 +95,10 @@
     }
 
     #qr-code {
-      width: 100%;
-      height: 100%;
-      margin: auto;
-    } 
-
-    .image-container img {
-      display: block; 
-      margin-left: auto;
-      margin-right: auto;
-      width: 300px;
-      height: 300px;
+      width: 250px;
+      height: 250px;
+      display: block;
+      margin: 0 auto;
     }
 }
 
